VACMS-7746 adjust spacing on view tab. fix node link report empty div

--- a/docroot/themes/custom/vagovclaro/assets/scss/components/_layout.scss
+++ b/docroot/themes/custom/vagovclaro/assets/scss/components/_layout.scss
@@ -68,3 +68,15 @@
     max-width: 54rem;
   }
 }
+
+.page-content {
+  margin-top: 0;
+}
+
+.node-columns {
+  margin-top: var(--space-l);
+}
+
+.region-sidebar-first h2 {
+  margin-top: 0;
+}
