--- a/docroot/themes/custom/vagovclaro/assets/scss/pages/_node-view.scss
+++ b/docroot/themes/custom/vagovclaro/assets/scss/pages/_node-view.scss
@@ -73,6 +73,5 @@ tr:only-child {
 // adjust spacing on unpublished nodes
 .node--unpublished {
   background-color: var(--va-red-lightest);
-  margin: -1rem;
-  padding: 1rem;
+  padding: var(--spacing-m);
 }
